# binancestream-app

./: .env  README.md  compose.yaml
app/: Dockerfile  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx  socket.ts  trades.tsx
app/components/ui/: button.tsx  icons.tsx  input.tsx
app/utils/: symbols.json
backend/: Dockerfile  manage.py  pyproject.toml
backend/api/: consumers.py  models.py  routing.py  tasks.py  urls.py  views.py
backend/api/management/commands/: client.py
backend/api/migrations/: 0001_initial.py
backend/cleancar/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/templates/: index.html
